# debate-stats

./: .gitattributes  Cargo.toml  README.md
resources/test/: npdi.xml
src/: entry.rs  error.rs  event.rs  lib.rs  tournament.rs  util.rs
src/tournament/: from_url.rs
src/tournament/from_url/: tabroom.rs
src/tournament/from_url/tabroom/: orm.rs  process_api.rs
src/util/: network.rs  test.rs
tests/: version-sync.rs
